gcc/testsuite/rust/rustc/ui/error-codes/E0199.rs
#![feature(negative_impls)]

struct Foo;

trait Bar { }
unsafe impl Bar for Foo { } // { dg-error ".E0199." "" { target *-*-* } }

fn main() {
}

